[project]
name = "imej-denoiser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "ipython>=8.31.0",
    "matplotlib>=3.10.0",
    "onnx>=1.17.0",
    "opencv-python>=4.10.0.84",
    "pycuda>=2024.1.2",
    "pytorch-msssim>=1.0.0",
    "torch>=2.5.1",
    "torchvision>=0.2.0",
    "wandb>=0.19.1",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "platform_system != 'Darwin'" },
]
torchvision = [
  { index = "pytorch-cu124", marker = "platform_system != 'Darwin'" },
]
